# himawari8

./: .gitignore  README.md  pyproject.toml  setup.py
himawari-8/: utils.py
himawari8/: __main__.py  utils.py
osx/: org.boramalper.himawari8.plist
systemd/: himawari8.service  himawari8.timer
windows/: himawari8.xml
